--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
         <link rel="stylesheet" href="/bower_components/foundation/css/foundation.css">
+        <link rel="stylesheet" href="/bower_components/fontawesome/css/font-awesome.min.css">
         <title>Karousel</title>
     </head>
 
