Implemented collections with mock data

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
         <script src="/bower_components/foundation/js/foundation.min.js"></script>
 
         <script src="/js/application.js"></script>
+        <script src="/js/routes.js"></script>
     </body>
 
 </html>
